# Agents

./: .gitignore  1.WebSearchAgent.py  2.AgentFunctionCalling.py  2.LC_WebSearcchAgentFunctionCalling.py  3.LC_RAGAgent.py  3.RAGAgent.py  4.FiassIndexingHNSWOpenai.py  5.Promting.txt  6.LG_ReActFunctionCalling.py  7.LG_ReflectionAgent.py  8.LG_ReflexionAgent.py  README.md  pyproject.toml  requirements.txt
10.LG_SelfRAG/: main.py
10.LG_SelfRAG/src/: graph.py
10.LG_SelfRAG/src/chains/: answer_grader.py  hallucination_grader.py
11.LG_AdaptiveRAG/: main.py  udo systemctl start ollama
11.LG_AdaptiveRAG/src/: __init__.py  graph.py  ingestion.py  state.py
11.LG_AdaptiveRAG/src/nodes/: __init__.py  generate.py  retrieve.py  web_search.py
12.PGvectorDB/: pgVectorDB.py  pgVector_Docker.txt  retrieve_pgVector.py
13.AsyncIO/: SearchAgent.py  main.py
13.AsyncIO/src/: Graph.py  State.py  __init__.py
13.AsyncIO/src/artifact/: Analysis.py  Settings.py  VectorSearch.py  WebSearch.py  __init__.py
13.AsyncIO/src/nodes/: NodeAnalysisNReport.py  NodeMerged.py  NodePlanning.py  NodeVectorSearch.py  NodeWebSearch.py  __init__.py
6.LG_ReActFunctionCalling/: nodes.py  react.py
9.LG_CorrectiveRAG/: .gitignore  LG_CorrectiveRAG.py  ingestion.py  main.py  retrieve.py  state.py
9.LG_CorrectiveRAG/chains/: retrieval_grader.py
9.LG_CorrectiveRAG/chains/tests/: test_chains.py
9.LG_CorrectiveRAG/nodes/: grade_documents.py
9.LG_CorrectiveRAG/src/: graph.py
9.LG_CorrectiveRAG/src/chains/: __init__.py  generation.py  retrieval_grader.py
9.LG_CorrectiveRAG/src/nodes/: __init__.py  grade_documents.py  retrieve.py
9.LG_CorrectiveRAG/tests/: test_chains.py
Data/faiss_index/: index.pkl
