[project]
name = "langchain-react-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=1.3.1",
    "langchain-google-genai>=4.1.3",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.16",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
